compiler/testData/diagnostics/tests/ClassObjectCannotAccessClassFields.kt
// http://youtrack.jetbrains.net/issue/KT-20

class A() {
    val x = 1

    class object {
        val y = <!UNRESOLVED_REFERENCE!>x<!>
    }
}
